--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,7 +11,16 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    
+
+    # Prevent concurrent deployments
+    concurrency: 
+        group: production_deploy
+        cancel-in-progress: true
+      
+    # Optional: Add environment protection rules
+    environment:
+        name: production
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
